fix: delete russian text and fix whitespace

--- a/src/app/components/ui/product/productBlock/style.scss
+++ b/src/app/components/ui/product/productBlock/style.scss
@@ -3,7 +3,6 @@
 @import 'src/app/scss/variables';
 
 .products-vList {
-    margin: 0px 0px 20px 0px;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -11,7 +10,6 @@
 }
 
 .products-vCard {
-    margin: 0px 0px 20px 0px;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
