--- a/src/app/pages/categoryPage/style.scss
+++ b/src/app/pages/categoryPage/style.scss
@@ -28,6 +28,7 @@
 
 .bodyCat {
     display: flex;
+    padding-bottom: 20px;
 
     &__list {
         flex: 1 1 auto;
